NetBSD Problem Report #42525

From www@NetBSD.org  Sun Dec 27 08:25:48 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 6BF8963C37E
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 27 Dec 2009 08:25:48 +0000 (UTC)
Message-Id: <20091227082548.3CCC563B844@www.NetBSD.org>
Date: Sun, 27 Dec 2009 08:25:48 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing backslash in sys/arch/hpcmips/tx/tx39io.c .
X-Send-Pr-Version: www-1.0

>Number:         42525
>Category:       port-hpcmips
>Synopsis:       Missing backslash in sys/arch/hpcmips/tx/tx39io.c .
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-hpcmips-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 27 08:30:01 +0000 2009
>Closed-Date:    Sun Jun 06 06:21:57 +0000 2010
>Last-Modified:  Sun Jun 06 06:21:57 +0000 2010
>Originator:     Henning Petersen
>Release:        
>Organization:
>Environment:
>Description:
Missing backslah found with cppcheck.
>How-To-Repeat:

>Fix:
diff -u -r1.21 tx39io.c
--- sys/arch/hpcmips/tx/tx39io.c	28 Apr 2008 20:23:21 -0000	1.21
+++ sys/arch/hpcmips/tx/tx39io.c	1 Dec 2009 09:04:44 -0000
@@ -86,7 +86,7 @@
 #endif
 #if defined TX391X && defined TX392X
 #define	tx39_io_intr_map(t, s, p, m)					\
-	(IS_TX391X(t)
+	(IS_TX391X(t)							\
 	    ? tx391x_io_intr_map(s, p, m) : tx392x_io_intr_map(s, p, m))
 #elif defined TX391X
 #define	tx39io_intr_map(t, s, p, m)	tx391x_io_intr_map(s, p, m)

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42525 CVS commit: src/sys/arch/hpcmips/tx
Date: Sun, 6 Jun 2010 06:12:50 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Jun  6 06:12:49 UTC 2010

 Modified Files:
 	src/sys/arch/hpcmips/tx: tx39io.c

 Log Message:
 Add missing backslash in macro definition in apparently-disused #if branch.
 (has been this way since 2001)
 From Henning Petersen in PR 42525.


 To generate a diff of this commit:
 cvs rdiff -u -r1.21 -r1.22 src/sys/arch/hpcmips/tx/tx39io.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 06 Jun 2010 06:21:57 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.