Add missing backslash in macro definition in apparently-disused #if branch. (has been this way since 2001) From Henning Petersen in PR 42525.